Add ipython notebook

--- a/MothPollen4.ipynb
+++ b/MothPollen4.ipynb
@@ -80,13 +80,22 @@
     "--clust_match 1 \\\n",
     "--clust_cov 5 \\\n",
     "--blast \\\n",
-    "--blast_db /home/working/src/BLAST_DB/nt \\\n",
+    "--blast_db Final/nt/nt \\\n",
     "--min_ident 0.95 \\\n",
     "-n 5 \\\n",
     "-v \\\n",
     "-@ callumjmacgregor@gmail.com \\\n",
     "-o MothPollenGenbank > log"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
