Pplacer preparation completed and assignment failed

--- a/AgainstRefDB/Curat1/FINAL/Sativa/Sativa_final.ipynb
+++ b/AgainstRefDB/Curat1/FINAL/Sativa/Sativa_final.ipynb
@@ -12472,7 +12472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -12483,22 +12483,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RaxmlConf named raxml-mafftLinsi-SATIVA-clipped with ID 743581477665391.27\n",
+      "Alignments: rbcL@mafftLinsi-SATIVA@gappyout \n",
+      "Created on: Fri Oct 28 14:36:31 2016\n",
+      "Commands:\n",
+      "rbcL@mafftLinsi-SATIVA@gappyout:\n",
+      "raxmlHPC-PTHREADS-SSE3 -f a -m GTRGAMMA -n 743581477665391.27_rbcL@mafftLinsi-SATIVA@gappyout0 -p 825 -s 743581477665391.27_rbcL@mafftLinsi-SATIVA@gappyout.fasta -T 5 -x 462 -N 100\n",
+      "\n",
+      "Environment:\n",
+      "Platform: Linux-4.4.0-45-generic-x86_64-with-Ubuntu-14.04-trusty\n",
+      " Processor: x86_64\n",
+      " Python build: defaultMar 22 2014 22:59:56\n",
+      " Python compiler: GCC 4.8.2\n",
+      " Python implementation: CPython\n",
+      " Python version: 2.7.6\n",
+      " ete2 version: 2.2.1072\n",
+      " biopython version: 1.68\n",
+      " dendropy version: 3.12.2\n",
+      " cloud version: 2.8.5\n",
+      " reprophylo version 1.3\n",
+      " User: BioPC5\n",
+      " Program and version: raxmlHPC-PTHREADS-SSE3RAxML version 8.0.12\n",
+      " Program reference: A. Stamatakis: RAxML Version 8: A tool for Phylogenetic Analysis and Post-Analysis of Large Phylogenies. In Bioinformatics\n",
+      " 2014.\n",
+      "execution time:\n",
+      "7882.38629913\n",
+      "\n",
+      "==============================\n",
+      "Core Methods section sentence:\n",
+      "==============================\n",
+      "Phylogenetic trees were reconstructed from the dataset(s) rbcL@mafftLinsi-SATIVA@gappyout using the program raxmlHPC-PTHREADS-SSE3RAxML version 8.0.12 [1].\n",
+      "\n",
+      "Reference:\n",
+      "A. Stamatakis: RAxML Version 8: A tool for Phylogenetic Analysis and Post-Analysis of Large Phylogenies. In Bioinformatics, 2014.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print pj.used_methods['raxml-mafftLinsi-SATIVA-clipped']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'post_SATIVA_align.pkl'"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pickle_pj(pj, 'post_SATIVA_align.pkl')"
    ]
@@ -12512,7 +12564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {
     "collapsed": true
    },
@@ -12523,7 +12575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
     "collapsed": true
    },
@@ -12536,7 +12588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {
     "collapsed": true
    },
@@ -12549,7 +12601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {
     "collapsed": true
    },
@@ -12565,11 +12617,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'post_SATIVA_align.pkl'"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pickle_pj(pj, 'post_SATIVA_align.pkl')"
    ]
@@ -12583,7 +12646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
     "collapsed": true
    },
@@ -12596,7 +12659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {
     "collapsed": true
    },
